--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "main": "index.js",
   "license": "ISC",
   "scripts": {
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
+    "start": "node src/server.ts"
   },
-  "devDependencies": {
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
-    "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "^3.9.7"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "@types/mongoose": "^5.7.36",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
