fixing start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "ISC",
   "scripts": {
-    "start": "node src/server.ts"
+    "start": "node src/server.js"
   },
   "devDependencies": {},
   "dependencies": {
